--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<title> khanya Giba</title>
-	<link rel="stylesheet" type="text/css" href="style/indexstyle.css">
-	<link rel="stylesheet" type="text/css" href="style/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="indexstyle.css">
+	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 </head>
 <body class="body-main">
 	<div class="linkss">
 		<ul class="main-nav">
 			<li><a href="index.html">Home</a></li>
-			<li><a href="pages/project.html">project</a></li>
-			<li><a href="pages/gallery.html">gallery</a></li>
+			<li><a href="project.html">project</a></li>
+			<li><a href="gallery.html">gallery</a></li>
 		</ul>
 	</div>
 	<div class="heading1">My career of interest is Data science</div>
-	<img src="images/khanya.jpg" alt=" khanya Giba" class="img-settings img-responsive">
+	<img src="khanya.jpg" alt=" khanya Giba" class="img-settings img-responsive">
 	<div class="content">
 		<p class="paragraph">data science is a multi-disciplinary field that uses scientific menthods, processes, algorithms and systems to extract knowledge and insight from structured and unstructured data<br>A data scientist turns raw data into valuable insights that an organisation needs in order to grow and compete. They interpret and analyse data from multiple sources to come up with imaginative solution to problems<br> Data scientist have different functions depending on which industry they are involved in for example, a data scientist working for facebook might analyse the types of pages user like and then use this information to decide what type of advertisments the user will see when using their facebook account.They combine practical skills such as coding and maths with the ability to analyse statistics
 		</p>
@@ -24,7 +24,7 @@
 		<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/d.PNG" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="blog.html" class="blog-img"><img src="d.PNG" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
 									<span><small> </small> <small> </small> <small> <i class="icon-buble3"></i> </small></span>
 									<p></p>
@@ -43,7 +43,7 @@
 	</div>
 	<div>
 		<audio autoplay controls>
-			<source src="sounds/123.mp3" type="audio/mpeg">
+			<source src="123.mp3" type="audio/mpeg">
 		</audio>
 	</div>
 
