--- a/project.html
+++ b/project.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>team1</title>
-	<link rel="stylesheet" type="text/css" href="../style/indexstyle.css">
-	<link rel="stylesheet" type="text/css" href="../style/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="indexstyle.css">
+	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 </head>
 
 <body class="body-main">
 	<div class="linkss">
 		<ul class="main-nav">
-			<li><a href="../index.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			
 		</ul>
 	</div>
