--- a/gallery.html
+++ b/gallery.html
@@ -3,15 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<title>Gallery</title>
-	<link rel="stylesheet" type="text/css" href="../style/indexstyle.css">
-	<link rel="stylesheet" type="text/css" href="../style/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="indexstyle.css">
+	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 </head>
 
 <body class="gallery-body">
 	<div class="container">
 	<div class="linkss">
 		<ul class="main-nav">
-			<li><a href="../index.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			
 		</ul>
 		<h1 class="text-center pb-5">Gallery</h1>
@@ -19,16 +19,16 @@
 		
 		<div class="row">
 			<div class="col-sm-3">
-				<img src="../images/21.jpg" alt=" khanya Giba" class="img-settings img-responsive">
+				<img src="21.jpg" alt=" khanya Giba" class="img-settings img-responsive">
 			</div>
 			<div class="col-sm-3">
-				<img src="../images/23.jpg" alt=" khanya Giba" class="img-settings img-responsive">
+				<img src="23.jpg" alt=" khanya Giba" class="img-settings img-responsive">
 			</div>
 			<div class="col-sm-3">
-				<img src="../images/24.jpg" alt=" khanya Giba" class="img-settings img-responsive">
+				<img src="24.jpg" alt=" khanya Giba" class="img-settings img-responsive">
 			</div>
 			<div class="col-sm-3">
-				<img src="../images/khanya.JPG" alt=" khanya Giba" class="img-settings img-responsive">
+				<img src="khanya.JPG" alt=" khanya Giba" class="img-settings img-responsive">
 			</div>
 		</div>
 	</div>
